--- a/client_code/log_in_form/Home/loan_management/form_template.yaml
+++ b/client_code/log_in_form/Home/loan_management/form_template.yaml
@@ -34,38 +34,65 @@ components:
     layout_properties: {grid_position: 'GAWPTG,ETBNFC'}
   - type: Link
     properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: 'Loans Disbursed ', font_size: null, wrap_on: mobile, font: '',
-      col_spacing: medium, spacing_above: small, icon_align: left, col_widths: '',
+      visible: true, text: ' Loans Disbursed ', font_size: null, wrap_on: mobile,
+      font: '', col_spacing: medium, spacing_above: small, icon_align: left, col_widths: '',
       spacing_below: small, italic: false, background: '', bold: false, underline: false,
       icon: ''}
     name: link_2
     layout_properties: {grid_position: 'VYUFHP,KKYJVY'}
   - type: Link
-    properties: {}
+    properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: ' Manual Disbursement', font_size: null, wrap_on: mobile,
+      font: '', col_spacing: medium, spacing_above: small, icon_align: left, col_widths: '',
+      spacing_below: small, italic: false, background: '', bold: false, underline: false,
+      icon: ''}
     name: link_3
     layout_properties: {grid_position: 'VYUFHP,KRLYQV'}
   - type: Link
-    properties: {}
+    properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: ' Lost Opportunities', font_size: null, wrap_on: mobile,
+      font: '', col_spacing: medium, spacing_above: small, icon_align: left, col_widths: '',
+      spacing_below: small, italic: false, background: '', bold: false, underline: false,
+      icon: ''}
     name: link_4
     layout_properties: {grid_position: 'VYUFHP,OLTFCK'}
   - type: Link
-    properties: {}
+    properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: '  Rejected loans', font_size: null, wrap_on: mobile, font: '',
+      col_spacing: medium, spacing_above: small, icon_align: left, col_widths: '',
+      spacing_below: small, italic: false, background: '', bold: false, underline: false,
+      icon: ''}
     name: link_5
     layout_properties: {grid_position: 'WBEZSX,VNINYH'}
   - type: Link
-    properties: {}
+    properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: ' Under process', font_size: null, wrap_on: mobile, font: '',
+      col_spacing: medium, spacing_above: small, icon_align: left, col_widths: '',
+      spacing_below: small, italic: false, background: '', bold: false, underline: false,
+      icon: ''}
     name: link_6
     layout_properties: {grid_position: 'WBEZSX,GNIFFV'}
   - type: Link
-    properties: {}
+    properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: ' Closed loans', font_size: null, wrap_on: mobile, font: '',
+      col_spacing: medium, spacing_above: small, icon_align: left, col_widths: '',
+      spacing_below: small, italic: false, background: '', bold: false, underline: false,
+      icon: ''}
     name: link_7
     layout_properties: {grid_position: 'WBEZSX,IZYGTH'}
   - type: Link
-    properties: {}
+    properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: ' Lapsed', font_size: null, wrap_on: mobile, font: '',
+      col_spacing: medium, spacing_above: small, icon_align: left, col_widths: '',
+      spacing_below: small, italic: false, background: '', bold: false, underline: false,
+      icon: ''}
     name: link_8
     layout_properties: {grid_position: 'ZYZQED,QASUMB'}
   - type: Link
-    properties: {}
+    properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: NPA, font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
+      spacing_above: small, icon_align: left, col_widths: '', spacing_below: small,
+      italic: false, background: '', bold: false, underline: false, icon: ''}
     name: link_9
     layout_properties: {grid_position: 'ZYZQED,AOQKDI'}
   - type: Link
