--- a/client_code/log_in_form/Home/loan_management/form_template.yaml
+++ b/client_code/log_in_form/Home/loan_management/form_template.yaml
@@ -33,146 +33,93 @@ components:
     name: label_1
     layout_properties: {grid_position: 'GAWPTG,ETBNFC'}
   - type: Link
-    properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+    properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '#0876E8',
       visible: true, text: ' Loans Disbursed ', font_size: null, wrap_on: mobile,
       font: '', col_spacing: medium, spacing_above: small, icon_align: left, col_widths: '',
       spacing_below: small, italic: false, background: '', bold: false, underline: false,
       icon: ''}
     name: link_2
     layout_properties: {grid_position: 'VYUFHP,KKYJVY'}
+    event_bindings: {click: link_2_click}
   - type: Link
-    properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+    properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '#0876E8',
       visible: true, text: ' Manual Disbursement', font_size: null, wrap_on: mobile,
       font: '', col_spacing: medium, spacing_above: small, icon_align: left, col_widths: '',
       spacing_below: small, italic: false, background: '', bold: false, underline: false,
       icon: ''}
     name: link_3
     layout_properties: {grid_position: 'VYUFHP,KRLYQV'}
+    event_bindings: {click: link_3_click}
   - type: Link
-    properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+    properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '#0876E8',
       visible: true, text: ' Lost Opportunities', font_size: null, wrap_on: mobile,
       font: '', col_spacing: medium, spacing_above: small, icon_align: left, col_widths: '',
       spacing_below: small, italic: false, background: '', bold: false, underline: false,
       icon: ''}
     name: link_4
     layout_properties: {grid_position: 'VYUFHP,OLTFCK'}
+    event_bindings: {click: link_4_click}
   - type: Link
-    properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+    properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '#0876E8',
       visible: true, text: '  Rejected loans', font_size: null, wrap_on: mobile, font: '',
       col_spacing: medium, spacing_above: small, icon_align: left, col_widths: '',
       spacing_below: small, italic: false, background: '', bold: false, underline: false,
       icon: ''}
     name: link_5
     layout_properties: {grid_position: 'WBEZSX,VNINYH'}
+    event_bindings: {click: link_5_click}
   - type: Link
-    properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+    properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '#0876E8',
       visible: true, text: ' Under process', font_size: null, wrap_on: mobile, font: '',
       col_spacing: medium, spacing_above: small, icon_align: left, col_widths: '',
       spacing_below: small, italic: false, background: '', bold: false, underline: false,
       icon: ''}
     name: link_6
     layout_properties: {grid_position: 'WBEZSX,GNIFFV'}
+    event_bindings: {click: link_6_click}
   - type: Link
-    properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+    properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '#0876E8',
       visible: true, text: ' Closed loans', font_size: null, wrap_on: mobile, font: '',
       col_spacing: medium, spacing_above: small, icon_align: left, col_widths: '',
       spacing_below: small, italic: false, background: '', bold: false, underline: false,
       icon: ''}
     name: link_7
     layout_properties: {grid_position: 'WBEZSX,IZYGTH'}
+    event_bindings: {click: link_7_click}
   - type: Link
-    properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+    properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '#0876E8',
       visible: true, text: ' Lapsed', font_size: null, wrap_on: mobile, font: '',
       col_spacing: medium, spacing_above: small, icon_align: left, col_widths: '',
       spacing_below: small, italic: false, background: '', bold: false, underline: false,
       icon: ''}
     name: link_8
     layout_properties: {grid_position: 'ZYZQED,QASUMB'}
+    event_bindings: {click: link_8_click}
   - type: Link
-    properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: NPA, font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
-      spacing_above: small, icon_align: left, col_widths: '', spacing_below: small,
-      italic: false, background: '', bold: false, underline: false, icon: ''}
+    properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '#0876E8',
+      visible: true, text: ' Defaulters', font_size: null, wrap_on: mobile, font: '',
+      col_spacing: medium, spacing_above: small, icon_align: left, col_widths: '',
+      spacing_below: small, italic: false, background: '', bold: false, underline: false,
+      icon: ''}
     name: link_9
     layout_properties: {grid_position: 'ZYZQED,AOQKDI'}
+    event_bindings: {click: link_9_click}
   - type: Link
-    properties: {}
+    properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '#0876E8',
+      visible: true, text: ' NPA', font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
+      spacing_above: small, icon_align: left, col_widths: '', spacing_below: small,
+      italic: false, background: '', bold: false, underline: false, icon: ''}
     name: link_10
     layout_properties: {grid_position: 'ZYZQED,AFKZAI'}
+    event_bindings: {click: link_10_click}
   - type: Link
-    properties: {}
+    properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '#0876E8',
+      visible: true, text: ' OTS', font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
+      spacing_above: small, icon_align: left, col_widths: '', spacing_below: small,
+      italic: false, background: '', bold: false, underline: false, icon: ''}
     name: link_11
     layout_properties: {grid_position: 'GVUYQE,UATZJY'}
-  - type: Label
-    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: Manual Disbursement, font_size: null, font: '', spacing_above: small,
-      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-      underline: false, icon: ''}
-    name: label_3
-    layout_properties: {grid_position: 'KOYYNC,TYCXFH'}
-  - type: Label
-    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: 'Loans Disbursed ', font_size: null, font: '', spacing_above: small,
-      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-      underline: false, icon: ''}
-    name: label_2
-    layout_properties: {grid_position: 'KOYYNC,FYCDMT'}
-  - type: Label
-    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: Lost Opportunities, font_size: null, font: '', spacing_above: small,
-      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-      underline: false, icon: ''}
-    name: label_4
-    layout_properties: {grid_position: 'EEXGMJ,AANECF'}
-  - type: Label
-    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: ' Rejected loans', font_size: null, font: '', spacing_above: small,
-      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-      underline: false, icon: ''}
-    name: label_6
-    layout_properties: {grid_position: 'EEXGMJ,RTZTFE'}
-  - type: Label
-    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: Under process, font_size: null, font: '', spacing_above: small,
-      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-      underline: false, icon: ''}
-    name: label_5
-    layout_properties: {grid_position: 'GWQEJZ,HSGOYD'}
-  - type: Label
-    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: Closed loans, font_size: null, font: '', spacing_above: small,
-      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-      underline: false, icon: ''}
-    name: label_7
-    layout_properties: {grid_position: 'GWQEJZ,ATSJYS'}
-  - type: Label
-    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: Lapsed, font_size: null, font: '', spacing_above: small,
-      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-      underline: false, icon: ''}
-    name: label_8
-    layout_properties: {grid_position: 'ZIDWBJ,ZRBHWL'}
-  - type: Label
-    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: NPA, font_size: null, font: '', spacing_above: small, icon_align: left,
-      spacing_below: small, italic: false, background: '', bold: false, underline: false,
-      icon: ''}
-    name: label_11
-    layout_properties: {grid_position: 'ZIDWBJ,RSETBC'}
-  - type: Label
-    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: OTS, font_size: null, font: '', spacing_above: small, icon_align: left,
-      spacing_below: small, italic: false, background: '', bold: false, underline: false,
-      icon: ''}
-    name: label_10
-    layout_properties: {grid_position: 'XJUINX,QGRIGK'}
-  - type: Label
-    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: Defaulters, font_size: null, font: '', spacing_above: small,
-      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-      underline: false, icon: ''}
-    name: label_9
-    layout_properties: {grid_position: 'XJUINX,FEEDUM'}
+    event_bindings: {click: link_11_click}
 - type: FlowPanel
   properties: {}
   name: navbar_links
