--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -5,9 +5,11 @@ unique_ids:
     log_in_form.Home.loan_management.closed_loans: '169900757260896211433440.56126'
     log_in_form.Home.manage_reports: '1698510790972444753270153.69006'
     log_in_form.Home: '169838228559032231040135.46263'
+    log_in_form.Home.manage_settings.manage_facts: '1699008960083449252857088.74243'
     log_in_form.Home.loan_management.npa_form: '1699007541594815950811282.3915'
     log_in_form.Home.loan_management.ots_form: '1699007619743656257377013.5234'
     log_in_form: GUGLRS4VVV3FBLZUMSK4OE75PW55BHQW
+    log_in_form.Home.manage_settings.manage_membership: '1699008921737741791321030.3928'
     log_in_form.Home.loan_management: '1698510496370567653860910.7308'
     log_in_form.Home.loan_management.loan_disbursed: '1699007343401922839978054.3939'
     log_in_form.Home.admin_teams.view_profile: '1698854972350390763170561.2675'
@@ -21,11 +23,13 @@ unique_ids:
     Log_in_Home: '1698727115891669303119860.9404'
     log_in_form.Home.manage_products: '1698510531650695240800375.4204'
     log_in_form.Home.loan_management.lapsed: '169900766496418104210797.048603'
+    log_in_form.Home.manage_settings.manage_roi: '1699008937784723816781812.2181'
     log_in_form.Home.admin_teams.view_profile.edit_form: '1698907575731908465721374.0109'
     log_in_form.Home.risk_pool: '1698510663776338046362020.20764'
     log_in_form.Home.borrowers: '1698510391677311917004052.9009'
     log_in_form.Home.loan_management.defaulters: '1699007677809133269078101.18561'
     log_in_form.Home.loan_management.under_process: '1699007519934382529687066.75116'
+    log_in_form.Home.manage_settings.manage_fee: '1699008892498722156546612.8901'
     log_in_form.Home.lenders: '1698510463208765568412581.0891'
     log_in_form.Home.ROI: '1698728518958724320447228.9803'
   modules: {}
