--- a/client_code/log_in_form/Home/manage_settings/manage_fee/form_template.yaml
+++ b/client_code/log_in_form/Home/manage_settings/manage_fee/form_template.yaml
@@ -16,56 +16,17 @@ components:
     name: image_1
     layout_properties:
       col_widths: {}
-      grid_position: XXWHIM,BTSOFJ
+      grid_position: TXLRYQ,CMUPYB
   - type: Link
     properties: {role: null, url: '', align: right, tooltip: '', border: '', foreground: '#0876E8',
-      visible: true, text: 'Home   ', font_size: 15, wrap_on: mobile, font: '', col_spacing: medium,
-      spacing_above: small, icon_align: left, col_widths: '', spacing_below: small,
-      italic: false, background: '', bold: true, underline: false, icon: 'fa:home'}
+      visible: true, text: 'Back   ', font_size: null, wrap_on: mobile, font: '',
+      col_spacing: medium, spacing_above: small, icon_align: left, col_widths: '',
+      spacing_below: small, italic: false, background: '', bold: true, underline: false,
+      icon: 'fa:backward'}
     name: link_1
-    layout_properties: {grid_position: 'XXWHIM,MMJYST'}
+    layout_properties: {grid_position: 'TXLRYQ,UJFSIB'}
     event_bindings: {click: link_1_click}
-  - type: Label
-    properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
-      visible: true, text: Manage Setting, font_size: null, font: '', spacing_above: small,
-      icon_align: left, spacing_below: small, italic: false, background: '', bold: true,
-      underline: false, icon: ''}
-    name: label_1
-    layout_properties: {grid_position: 'BXRSCA,PSJSSB'}
-  - type: Button
-    properties: {role: outlined-button, align: center, tooltip: '', border: '', enabled: true,
-      foreground: '#0876E8', visible: true, text: Manage Memberships, font_size: null,
-      font: '', spacing_above: small, icon_align: left, spacing_below: small, italic: false,
-      background: '', bold: false, underline: false, icon: ''}
-    name: button_1
-    layout_properties: {grid_position: 'PDOIAL,CXXXOM'}
-    event_bindings: {click: button_1_click}
-  - type: Button
-    properties: {role: outlined-button, align: center, tooltip: '', border: '', enabled: true,
-      foreground: '#0876E8', visible: true, text: '         Manage ROI       ', font_size: null,
-      font: '', spacing_above: small, icon_align: left, spacing_below: small, italic: false,
-      background: '', bold: false, underline: false, icon: ''}
-    name: button_2
-    layout_properties: {grid_position: 'PDOIAL,TPWHYT'}
-    event_bindings: {click: button_2_click}
-  - type: Button
-    properties: {role: outlined-button, align: center, tooltip: '', border: '', enabled: true,
-      foreground: '#0876E8', visible: true, text: '         Manage Fee         ',
-      font_size: null, font: '', spacing_above: small, icon_align: left, spacing_below: small,
-      italic: false, background: '', bold: false, underline: false, icon: ''}
-    name: button_3
-    layout_properties: {grid_position: 'IYANHT,KTSANY'}
-    event_bindings: {click: button_3_click}
-  - type: Button
-    properties: {role: outlined-button, align: center, tooltip: '', border: '', enabled: true,
-      foreground: '#0876E8', visible: true, text: Manage Quick Facts, font_size: null,
-      font: '', spacing_above: small, icon_align: left, spacing_below: small, italic: false,
-      background: '', bold: false, underline: false, icon: ''}
-    name: button_4
-    layout_properties: {grid_position: 'IYANHT,CELPZQ'}
-    event_bindings: {click: button_4_click}
 - type: FlowPanel
   properties: {}
   name: navbar_links
   layout_properties: {slot: nav-right}
-  components: []
