--- a/client_code/log_in_form/Home/manage_settings/manage_membership/form_template.yaml
+++ b/client_code/log_in_form/Home/manage_settings/manage_membership/form_template.yaml
@@ -26,6 +26,64 @@ components:
     name: link_1
     layout_properties: {grid_position: 'TZEFNQ,LBFCYO'}
     event_bindings: {click: link_1_click}
+  - type: Label
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: 'Manage Name:', font_size: 20, font: '', spacing_above: large,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: ''}
+    name: label_1
+    layout_properties: {grid_position: 'VEXGUW,JBOQUR'}
+  - type: DropDown
+    properties:
+      role: null
+      align: full
+      tooltip: ''
+      placeholder: Select Option
+      border: ''
+      enabled: true
+      foreground: ''
+      items: [Silver, Gold, Platinum]
+      visible: true
+      font_size: null
+      font: ''
+      spacing_above: large
+      spacing_below: small
+      italic: false
+      background: white
+      bold: false
+      underline: false
+      include_placeholder: true
+    name: drop_down_1
+    layout_properties: {grid_position: 'VEXGUW,FYVPZO'}
+  - type: Label
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: 'Tenure:', font_size: 20, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: ''}
+    name: label_2
+    layout_properties: {grid_position: 'BWZDET,KGECJP'}
+  - type: DropDown
+    properties:
+      role: null
+      align: full
+      tooltip: ''
+      placeholder: Select Option
+      border: ''
+      enabled: true
+      foreground: ''
+      items: [6 Months, 1 Year, 1 Year 6 Months, 2 Years]
+      visible: true
+      font_size: null
+      font: ''
+      spacing_above: small
+      spacing_below: small
+      italic: false
+      background: white
+      bold: false
+      underline: false
+      include_placeholder: true
+    name: drop_down_2
+    layout_properties: {grid_position: 'BWZDET,LLOUSE'}
 - type: FlowPanel
   properties: {}
   name: navbar_links
