--- a/client_code/log_in_form/Home/manage_settings/manage_fee/form_template.yaml
+++ b/client_code/log_in_form/Home/manage_settings/manage_fee/form_template.yaml
@@ -26,6 +26,62 @@ components:
     name: link_1
     layout_properties: {grid_position: 'TXLRYQ,UJFSIB'}
     event_bindings: {click: link_1_click}
+  - type: Label
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: 'Processing Fee:', font_size: 20, font: '', spacing_above: large,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: ''}
+    name: label_1
+    layout_properties: {grid_position: 'IYRHFQ,TAXIOK'}
+  - type: TextBox
+    properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: '',
+      border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
+      font: '', spacing_above: large, type: text, spacing_below: small, italic: false,
+      background: white, bold: false, underline: false}
+    name: text_box_1
+    layout_properties: {grid_position: 'IYRHFQ,TCSKUS'}
+  - type: Label
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: 'Extension Fee:', font_size: 20, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: ''}
+    name: label_2
+    layout_properties: {grid_position: 'VHUYOC,RUXTFD'}
+  - type: TextBox
+    properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: '',
+      border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
+      font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
+      background: white, bold: false, underline: false}
+    name: text_box_2
+    layout_properties: {grid_position: 'VHUYOC,ZRNJAM'}
+  - type: Label
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: 'Defaulters Fee:', font_size: 20, font: '', spacing_above: small,
+      icon_align: left, spacing_below: medium, italic: false, background: '', bold: false,
+      underline: false, icon: ''}
+    name: label_3
+    layout_properties: {grid_position: 'AKGFEA,KSIHWM', slot: title}
+  - type: TextBox
+    properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: '',
+      border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
+      font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
+      background: white, bold: false, underline: false}
+    name: text_box_3
+    layout_properties: {grid_position: 'AKGFEA,AYYEGT'}
+  - type: Button
+    properties: {role: null, align: center, tooltip: '', border: '', enabled: true,
+      foreground: black, visible: true, text: Add, font_size: 16, font: '', spacing_above: medium,
+      icon_align: left, spacing_below: small, italic: false, background: '#0876E8',
+      bold: false, underline: false, icon: ''}
+    name: button_1
+    layout_properties: {grid_position: 'DBQOGL,SFKDRI'}
+  - type: Button
+    properties: {role: null, align: center, tooltip: '', border: '', enabled: true,
+      foreground: black, visible: true, text: Edit, font_size: 15, font: '', spacing_above: large,
+      icon_align: left, spacing_below: small, italic: false, background: '#0876E8',
+      bold: false, underline: false, icon: ''}
+    name: button_2
+    layout_properties: {grid_position: 'DBQOGL,BLGYPK'}
 - type: FlowPanel
   properties: {}
   name: navbar_links
