--- a/client_code/log_in_form/Home/manage_settings/manage_membership/form_template.yaml
+++ b/client_code/log_in_form/Home/manage_settings/manage_membership/form_template.yaml
@@ -84,6 +84,13 @@ components:
       include_placeholder: true
     name: drop_down_2
     layout_properties: {grid_position: 'BWZDET,LLOUSE'}
+  - type: Button
+    properties: {role: null, align: center, tooltip: '', border: '', enabled: true,
+      foreground: black, visible: true, text: Submit, font_size: null, font: '', spacing_above: large,
+      icon_align: left, spacing_below: small, italic: false, background: '#0876E8',
+      bold: false, underline: false, icon: ''}
+    name: button_1
+    layout_properties: {grid_position: 'SGIJKZ,DNNJTS'}
 - type: FlowPanel
   properties: {}
   name: navbar_links
