--- a/client_code/log_in_form/Home/manage_settings/form_template.yaml
+++ b/client_code/log_in_form/Home/manage_settings/form_template.yaml
@@ -34,15 +34,15 @@ components:
     layout_properties: {grid_position: 'BXRSCA,PSJSSB'}
   - type: Button
     properties: {role: outlined-button, align: center, tooltip: '', border: '', enabled: true,
-      foreground: '', visible: true, text: Manage Memberships, font_size: null, font: '',
-      spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+      foreground: black, visible: true, text: Manage Memberships, font_size: null,
+      font: '', spacing_above: small, icon_align: left, spacing_below: small, italic: false,
       background: '#0876E8', bold: false, underline: false, icon: ''}
     name: button_1
     layout_properties: {grid_position: 'PDOIAL,CXXXOM'}
     event_bindings: {click: button_1_click}
   - type: Button
     properties: {role: outlined-button, align: center, tooltip: '', border: '', enabled: true,
-      foreground: '', visible: true, text: '         Manage ROI       ', font_size: null,
+      foreground: black, visible: true, text: '         Manage ROI       ', font_size: null,
       font: '', spacing_above: small, icon_align: left, spacing_below: small, italic: false,
       background: '#0876E8', bold: false, underline: false, icon: ''}
     name: button_2
@@ -50,7 +50,7 @@ components:
     event_bindings: {click: button_2_click}
   - type: Button
     properties: {role: outlined-button, align: center, tooltip: '', border: '', enabled: true,
-      foreground: '', visible: true, text: '         Manage Fee         ', font_size: null,
+      foreground: black, visible: true, text: '         Manage Fee         ', font_size: null,
       font: '', spacing_above: small, icon_align: left, spacing_below: small, italic: false,
       background: '#0876E8', bold: false, underline: false, icon: ''}
     name: button_3
@@ -58,8 +58,8 @@ components:
     event_bindings: {click: button_3_click}
   - type: Button
     properties: {role: outlined-button, align: center, tooltip: '', border: '', enabled: true,
-      foreground: '', visible: true, text: Manage Quick Facts, font_size: null, font: '',
-      spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+      foreground: black, visible: true, text: Manage Quick Facts, font_size: null,
+      font: '', spacing_above: small, icon_align: left, spacing_below: small, italic: false,
       background: '#0876E8', bold: false, underline: false, icon: ''}
     name: button_4
     layout_properties: {grid_position: 'IYANHT,CELPZQ'}
