--- a/client_code/log_in_form/Home/manage_settings/manage_facts/form_template.yaml
+++ b/client_code/log_in_form/Home/manage_settings/manage_facts/form_template.yaml
@@ -26,6 +26,90 @@ components:
     name: link_1
     layout_properties: {grid_position: 'HFHKEK,WSSKKM'}
     event_bindings: {click: link_1_click}
+  - type: Label
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: 'No. Of Visitors:', font_size: 20, font: '', spacing_above: large,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: ''}
+    name: label_1
+    layout_properties: {grid_position: 'PIKYXJ,PLGXZJ'}
+  - type: TextBox
+    properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: '',
+      border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
+      font: '', spacing_above: large, type: text, spacing_below: small, italic: false,
+      background: white, bold: false, underline: false}
+    name: text_box_1
+    layout_properties: {grid_position: 'PIKYXJ,OZHKVI'}
+  - type: Label
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: 'No of Borrowers Registered:', font_size: 20, font: '',
+      spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+      background: '', bold: false, underline: false, icon: ''}
+    name: label_2
+    layout_properties: {grid_position: 'UTLNHX,UIWTSL'}
+  - type: TextBox
+    properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: '',
+      border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
+      font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
+      background: white, bold: false, underline: false}
+    name: text_box_2
+    layout_properties: {grid_position: 'UTLNHX,LVCEQN'}
+  - type: Label
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: 'No of Lenders Registered:', font_size: 20, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: ''}
+    name: label_3
+    layout_properties: {grid_position: 'AIIKES,DPPOPN'}
+  - type: TextBox
+    properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: '',
+      border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
+      font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
+      background: white, bold: false, underline: false}
+    name: text_box_3
+    layout_properties: {grid_position: 'AIIKES,DLEJTM'}
+  - type: Label
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: 'Amount Disbursed:', font_size: 20, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: ''}
+    name: label_4
+    layout_properties: {grid_position: 'GUCDAK,MYJNQJ'}
+  - type: TextBox
+    properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: '',
+      border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
+      font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
+      background: white, bold: false, underline: false}
+    name: text_box_4
+    layout_properties: {grid_position: 'GUCDAK,XUBGWN'}
+  - type: Label
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: ' Lenders Commitment:', font_size: 20, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: ''}
+    name: label_5
+    layout_properties: {grid_position: 'FSOFNM,HSSMIQ'}
+  - type: TextBox
+    properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: '',
+      border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
+      font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
+      background: white, bold: false, underline: false}
+    name: text_box_5
+    layout_properties: {grid_position: 'FSOFNM,CWRFEQ'}
+  - type: Button
+    properties: {role: null, align: center, tooltip: '', border: '', enabled: true,
+      foreground: black, visible: true, text: Add, font_size: 16, font: '', spacing_above: medium,
+      icon_align: left, spacing_below: small, italic: false, background: '#0876E8',
+      bold: false, underline: false, icon: ''}
+    name: button_1
+    layout_properties: {grid_position: 'GIHPTF,APOKQP'}
+  - type: Button
+    properties: {role: null, align: center, tooltip: '', border: '', enabled: true,
+      foreground: black, visible: true, text: Edit, font_size: 16, font: '', spacing_above: medium,
+      icon_align: left, spacing_below: small, italic: false, background: '#0876E8',
+      bold: false, underline: false, icon: ''}
+    name: button_2
+    layout_properties: {grid_position: 'GIHPTF,VEKZQD'}
 - type: FlowPanel
   properties: {}
   name: navbar_links
