--- a/client_code/log_in_form/Home/manage_settings/manage_membership/form_template.yaml
+++ b/client_code/log_in_form/Home/manage_settings/manage_membership/form_template.yaml
@@ -91,6 +91,7 @@ components:
       bold: false, underline: false, icon: ''}
     name: button_1
     layout_properties: {grid_position: 'SGIJKZ,DNNJTS'}
+    event_bindings: {click: button_1_click}
 - type: FlowPanel
   properties: {}
   name: navbar_links
