--- a/client_code/log_in_form/Home/manage_settings/manage_facts/form_template.yaml
+++ b/client_code/log_in_form/Home/manage_settings/manage_facts/form_template.yaml
@@ -103,6 +103,7 @@ components:
       bold: false, underline: false, icon: ''}
     name: button_1
     layout_properties: {grid_position: 'GIHPTF,APOKQP'}
+    event_bindings: {click: button_1_click}
   - type: Button
     properties: {role: null, align: center, tooltip: '', border: '', enabled: true,
       foreground: black, visible: true, text: Edit, font_size: 16, font: '', spacing_above: medium,
