--- a/client_code/log_in_form/Home/manage_settings/manage_fee/form_template.yaml
+++ b/client_code/log_in_form/Home/manage_settings/manage_fee/form_template.yaml
@@ -83,6 +83,7 @@ components:
       bold: false, underline: false, icon: ''}
     name: button_2
     layout_properties: {grid_position: 'DBQOGL,BLGYPK'}
+    event_bindings: {click: button_2_click}
 - type: FlowPanel
   properties: {}
   name: navbar_links
