--- a/client_code/log_in_form/Home/manage_settings/manage_roi/form_template.yaml
+++ b/client_code/log_in_form/Home/manage_settings/manage_roi/form_template.yaml
@@ -26,7 +26,7 @@ components:
   - type: XYPanel
     properties: {height: 340.59999084472656, width: 750}
     name: xy_panel_1
-    layout_properties: {grid_position: 'FQLRTB,VEPUUM'}
+    layout_properties: {grid_position: 'FQLRTB,QCUJGX'}
     components:
     - type: Label
       properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
